--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -653,6 +653,301 @@ a {
     color: #000000 !important;
     padding: 1rem 1.5rem;
 }
+.eq_scard_img {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 100%;
+    height: 200px;
+}
+.eq_scard_txt {
+    background: rgba(0, 0, 0, 0.03);
+    padding: 20px;
+}
+.eq_scard_txt > h2 {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 1.5;
+    color: rgba(0, 0, 0, 0.9);
+}
+.eq_scard_txt > p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+.eq_srv_wrap {
+    margin-bottom: 40px;
+}
+.eq_rental_services {
+    padding: 7em 0;
+    position: relative;
+}
+.eq_rs_content_desc > span {
+    font-size: 12px;
+    display: block;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+    color: rgba(0, 0, 0, 0.3);
+    color: #ffa931;
+    letter-spacing: 2px;
+    font-weight: 600;
+}
+.eq_rs_content_desc > h2 {
+    line-height: 1.2;
+    font-size: 40px;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 0.9);
+}
+/* carousel testimonial  */
+.testimonial-slider {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .testimonials {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    transition: transform 0.3s ease;
+  }
+  
+  .testimonials .eq_tcarousel_item {
+    flex: 0 0 100%;
+  }
+  
+  .dots-container {
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  .dot {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: #ccc;
+    border-radius: 50%;
+    cursor: pointer;
+    margin: 0 5px;
+  }
+  
+  .dot.active {
+    background-color: #333;
+  }
+  .eq_tcarousel_wrap {
+    display: block;
+    position: relative;
+    color: rgba(0, 0, 0, 0.4);
+    background: #fff;
+    border-radius: 4px;
+    padding: 20px;
+    margin-bottom: 30px;
+    overflow: hidden;
+    z-index: 0;
+}
+.eq_tcarousel_img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+.eq_tcarousel_quote {
+    position: absolute;
+    bottom: -10px;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    background: #ffa931;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+}
+.eq_tcarousel_quote > i{
+    color: #fff;
+}
+.eq_tcarousel_text {
+    width: calc(100% - 100px);
+}
+.eq_tc_name {
+    font-weight: 600;
+    margin-bottom: 0;
+    color: #000000;
+}
+.eq_tc_position {
+    font-size: 18px;
+    color: #ffa931;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 500;
+}
+.eq_tcarousel_wrap:after {
+    position: absolute;
+    top: 0;
+    left: -60px;
+    bottom: 0;
+    content: '';
+    width: 120px;
+    height: 120px;
+    background: #ffa931;
+    -webkit-transform: skew(-45deg);
+    -ms-transform: skew(-45deg);
+    transform: skew(-45deg);
+    z-index: -1;
+}  
+/* end carousel  */
+.eq_testimonials_block {
+    position: relative;
+    background: #042e4f;
+    overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-attachment: fixed;
+    padding: 5em 0;
+    z-index: 0;
+}
+.eq_overlay2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: '';
+    opacity: .95;
+    background: #042e4f;
+    z-index: -2;
+}
+.eq_ttop >span {
+    font-size: 12px;
+    display: block;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+    color: rgba(0, 0, 0, 0.3);
+    color: #ffa931;
+    letter-spacing: 2px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 0.9) !important;
+}
+.eq_ttop >h2 {
+    line-height: 1.2;
+    font-size: 40px;
+    font-weight: 700;
+    color: rgba(255, 255, 255, 0.9) !important;
+}
+.eq_lb_link_img {
+    overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+    height: 250px;
+    width: 100%;
+    position: relative;
+    display: block;
+}
+.eq_latest_blogs {
+    padding: 7em 0;
+    position: relative;
+    background: #f8f9fa !important;
+}
+.eq_text_lb>span {
+    font-size: 12px;
+    display: block;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+    color: rgba(0, 0, 0, 0.3);
+    color: #ffa931;
+    letter-spacing: 2px;
+    font-weight: 600;
+}
+.eq_text_lb>h2{
+    line-height: 1.2;
+    font-size: 40px;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 0.9);
+}
+.eq_blog_entry {
+    width: 100%;
+    margin-bottom: 40px;
+}
+.eq_lblog_txt_blog {
+    position: relative;
+    border-top: 0;
+    border-radius: 2px;
+    width: 100%;
+    background: #fff;
+    padding: 20px 30px;
+}
+.eq_lb_meta > p {
+    display: inline-block;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+.eq_lb_meta p > a {
+    color: #ffa931;
+    font-size: 12px;
+}
+.mr-2 {
+    margin-right: 0.5rem !important;
+}
+.eq_main_lb_heading {
+    font-size: 22px;
+    margin-bottom: 16px;
+    line-height: 1.5;
+    color: rgba(0, 0, 0, 0.9);
+    font-weight: 400;
+}
+.eq_lb_p1 {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+.eq_lb_readmore > a {
+    background: #042e4f !important;
+    border: 1px solid #042e4f !important;
+    color: #fff !important;
+    font-weight: 600;
+}
+.eq_footer_end_block {
+    background: #111111 !important;
+    position: relative;
+    z-index: 0;
+}
+.eq_main_footer {
+    font-size: 16px;
+    background: #141414;
+    padding: 7em 0 0 0;
+    z-index: 0;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+}
+.eq_footer_col h2 {
+    font-size: 22px;
+    font-weight: 900;
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+.eq_footer_col h2 > a {
+    color: #ffa931;
+}
+.eq_footer_col > p {
+    color: rgba(255, 255, 255, 0.5);
+}
+.eq_footer_col ul {
+    margin: 0;
+    padding: 0;
+    margin-top: 1.5rem !important;
+    padding-left: 0;
+    list-style: none;
+}
 /* responsive */
 @media (min-width: 576px){
     
